<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="bot_find" translatable="true">Поиск</string>
    <string name="bot_media" translatable="true">Медиатека</string>
    <string name="bot_settings" translatable="true">Настройки</string>
    <string name="dark_theme" translatable="true">Темная тема</string>
    <string name="share_app" translatable="true">Поделиться приложением</string>
    <string name="write_support" translatable="true">Написать в поддержку</string>
    <string name="user_agreement" translatable="true">Пользовательское соглашение</string>
    <string name="mail_support_subject" translatable="true">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_support_massege" translatable="true">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_uri" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_text" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="my_email_adress" translatable="false">koritin@list.ru</string>
    <string name="placeholder_nothing_found_text">Ничего не нашлось</string>
    <string name="placeholder_communication_problems_text" translatable="true">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update" translatable="true">Обновить</string>
    <string name="you_find" translatable="true">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="_0_30" translatable="false">0:30</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="noData" translatable="true">"нет данных"</string>
    <string name="app_not_found" translatable="true">Приложение не найдено</string>
    <string name="nameMediaLibrary">Медиатека</string>
    <string name="empty_list_fav_tracks">Ваша медиатека пуста</string>
    <string name="empty_list_albums">Вы не создали\nни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="Albums">Плейлисты</string>
    <string name="No_media_for_playing">Нет отрывка для прослушивания</string>
    <string name="agreement">Соглашение</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="canсel">Отмена</string>
    <string name="сomplete">Завершить</string>
    <string name="add_to_playlist">Добавить в плейтист</string>
    <string name="playlist_empty">Не добавлено ни одного трека</string>
    <string name="playlist_is_empty">в плейлисте нет треков</string>
    <string name="track_delete_dialog_title">Хотите удалить трек?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="close">Закрыть</string>
    <string name="share">Поделится</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_del_alert_dialog_message">Хотите удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="playlist">плейлист</string>
    <string name="quantity_tracks">колличество треков</string>
    <string name="tracks">треки</string>

    <plurals name="minutes_plurals" translatable="false">
        <item quantity="zero">минут</item>
        <item quantity="one">минута</item>
        <item quantity="two">минуты</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>

    <plurals name="tracks_plurals" translatable="false">
        <item quantity="zero">треков</item>
        <item quantity="one">трек</item>
        <item quantity="two">трека</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
</resources>