<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutStyle"
    android:theme="@style/Theme.MainActivity"
    android:paddingHorizontal="@dimen/padding_16"
    android:paddingTop="14dp"
    android:paddingBottom="@dimen/padding_12"
    tools:context=".main.ui.MainFragment">

    <TextView
        style="@style/TextViewStyle"
        android:layout_gravity="start"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find"
        style="@style/MainButtonStyle"
        android:text="@string/bot_find"
        app:icon="@drawable/find" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media"
        style="@style/MainButtonStyle"
        android:text="@string/bot_media"
        app:icon="@drawable/media" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/MainButtonStyle"
        android:text="@string/bot_settings"
        app:icon="@drawable/setting" />

</LinearLayout>
