<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/backSetting"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="start|top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_20"
                android:layout_marginTop="@dimen/padding_20"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/back"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/bot_settings"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2"
        android:orientation="vertical">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/dark_theme"
            android:textSize="@dimen/set_text_size"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:backgroundTint="@color/set_background"
            android:gravity="start|center"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/set_text_size"
            android:typeface="sans"
            app:icon="@drawable/share"
            app:iconGravity="end"
            app:iconTint="#AEAFB4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:backgroundTint="@color/set_background"
            android:gravity="start|center"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/write_support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/set_text_size"
            android:typeface="sans"
            app:icon="@drawable/light_mode"
            app:iconGravity="end"
            app:iconTint="#AEAFB4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:backgroundTint="@color/set_background"
            android:gravity="start|center"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/user_agreement"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/set_text_size"
            android:typeface="sans"
            app:icon="@drawable/nextpage"
            app:iconGravity="end"
            app:iconTint="#AEAFB4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2">

    </LinearLayout>

</LinearLayout>
