<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   style="@style/LinearLayoutStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backFind"
            style="@style/appImageBack" />

        <TextView
            style="@style/appTextMenuName"
            android:text="@string/bot_find" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/menuFind_SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginVertical="@dimen/padding_8"
        android:paddingHorizontal="13dp"
        android:paddingVertical="8.5dp"
        android:background="@drawable/rounded_edittext"

        android:hint="@string/bot_find"
        android:textColorHint="?attr/colorSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/set_text_size"
        android:textColor="@color/black"

        android:inputType="textAutoComplete"
        android:maxLines="1"


        android:drawableStart="@drawable/search"
        android:drawableTint="?attr/colorSecondary"
        android:drawablePadding="9dp"

        android:imeOptions="actionDone"
        android:singleLine="true"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignRight="@id/menuFind_SearchEditText"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/trackListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_16" />

        <LinearLayout
            android:id="@+id/placeholder_find_view_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_find_tint"
                android:layout_width="@dimen/padding_120"
                android:layout_height="@dimen/padding_120"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/placeholder_find_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_24"
                android:layout_marginTop="@dimen/padding_16"
                android:gravity="center"
                tools:text="@string/placeholder_communication_problems_text"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="400"
                android:textSize="19sp"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/findUpdateButtonStyle"
                android:id="@+id/placeholder_button"
                android:text="@string/update"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_History_List_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="@dimen/padding_24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_find"
                android:layout_marginHorizontal="@dimen/padding_16"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="@dimen/padding_12"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                android:textFontWeight="500"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyTracksList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"/>

            <com.google.android.material.button.MaterialButton
                style="@style/findUpdateButtonStyle"
                android:id="@+id/clearSearchHistory"
                android:text="@string/clear_history" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>