<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutStyle"
    tools:context=".search.ui.fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            style="@style/appTextMenuName"
            android:text="@string/bot_find" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/menuFind_SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_8"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:drawableTint="?attr/colorSecondary"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/bot_find"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingTop="8.5dp"
            android:paddingBottom="7.5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorSecondary"
            android:textCursorDrawable="@drawable/etit_text_cursor"
            android:textSize="@dimen/set_text_size" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/menuFind_SearchEditText"
            android:layout_marginVertical="11dp"
            android:layout_marginEnd="@dimen/padding_12"
            android:src="@drawable/clear_icon"
            android:visibility="gone" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/trackListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_16" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/progressBarColor"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/placeholder_find_view_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_find_tint"
                android:layout_width="@dimen/padding_120"
                android:layout_height="@dimen/padding_120"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/placeholder_find_text"
                style="@style/textStyleHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_24"
                android:layout_marginTop="@dimen/padding_16"
                android:gravity="center"
                tools:text="@string/placeholder_communication_problems_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/placeholder_button"
                style="@style/findUpdateButtonStyle"
                android:text="@string/update"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_History_List_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_24"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/textStyleHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_16"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="@dimen/padding_12"
                android:gravity="center"
                android:text="@string/you_find" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Id_const_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyTracksList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toTopOf="@+id/clearSearchHistory"
                    app:layout_constraintStart_toStartOf="@+id/Id_const_layout"
                    app:layout_constraintTop_toTopOf="@+id/Id_const_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearSearchHistory"
                    style="@style/findUpdateButtonStyle"
                    android:layout_marginBottom="@dimen/padding_16"
                    android:text="@string/clear_history"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/Id_const_layout"
                    app:layout_constraintStart_toStartOf="@id/Id_const_layout"
                    app:layout_constraintTop_toBottomOf="@+id/historyTracksList" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </FrameLayout>

</LinearLayout>