<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_new_list"
            style="@style/appImageBack"
            android:layout_marginVertical="@dimen/padding_12"
            android:layout_marginStart="@dimen/padding_12"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_name_new_list_fragment"
            style="@style/appTextMenuName"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="@dimen/padding_12"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="@dimen/padding_4"
            android:paddingStart="@dimen/padding_4"
            android:text="@string/new_playlist"
            app:layout_constraintStart_toEndOf="@id/back_new_list"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/list_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/padding_24"
            android:layout_marginTop="26dp"
            android:src="@drawable/new_list_rouded_rectangle"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name_new_list_fragment" />

        <EditText
            android:id="@+id/name_playlist"
            android:layout_marginTop="32dp"
            android:hint="@string/playlist_name_hint"
            style="@style/new_playlist_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_cover" />

        <EditText
            android:id="@+id/description_playlist"
            android:layout_marginTop="@dimen/padding_16"
            android:hint="@string/playlist_description_hint"
            style="@style/new_playlist_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_playlist" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginHorizontal="17dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/new_playlist_button"
            android:paddingHorizontal="12.5dp"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="500"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/description_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Создать"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>